doc: additional info

--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <title>student-site</title>
 </head>
 <body>
-  Hi!! My name is Raghav Chandra V S  
+
+ <h2> Hi!! My name is Raghav Chandra V S  </h2>
+
+  <i> I am from Bengaluru</i>
+
+<strong> am a student of MIT Manipal,Karnataka</strong>
+
+
+  <!-- <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo eaque ea deserunt aut.
+       Maiores voluptatum consequuntur ipsa! Explicabo suscipit architecto laudantium dolorum 
+       quidem quae vel molestias, provident obcaecati neque in?</p> -->
+
+
 </body>
 </html>
