--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
  <h2> Hi!! My name is Raghav Chandra V S  </h2>
 
   <i> I am from Bengaluru</i>
-
-<strong> am a student of MIT Manipal,Karnataka</strong>
+  <br>
+  <br>
+<strong> I am a student of MIT Manipal,Karnataka</strong>
 
 
   <!-- <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo eaque ea deserunt aut.
