--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <br>
 <strong> I am a student of MIT Manipal,Karnataka</strong>
 
+<h4>I Persue Biomedical Engineering</h4>
 
   <!-- <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo eaque ea deserunt aut.
        Maiores voluptatum consequuntur ipsa! Explicabo suscipit architecto laudantium dolorum 
