--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <!-- <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo eaque ea deserunt aut.
        Maiores voluptatum consequuntur ipsa! Explicabo suscipit architecto laudantium dolorum 
        quidem quae vel molestias, provident obcaecati neque in?</p> -->
-
+    <h3> this change is made using git </h3>
 
 </body>
 </html>
